editing the link section

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
             </div>
 
             <div class="url">
-                <p class="address">http://www.frontendmentor.io</p>
+                <p class="address">http://twitter.com/frontendmentor</p>
                 <p class="break"></p>
-                <p class="short-url">http://reLink/k4lKyk</p>
+                <p class="short-url">http://reLink/gxOxp9</p>
                 <button class="copy-btn">Copy</button>
             </div>
 
