--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <p class="address" id="address">http://www.frontendmentor.io</p>
                 <p class="break"></p>
                 <p class="short-url" id="short">http://reLink/k4lKyk</p>
-                <button class="copy-btn"onclick="myFunction(Clicked!)">Copy</button>
+                <button class="copy-btn" id='init'onclick="myFunction(Clicked!)">Copy</button>
             </div>
         </main>
 
